--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:match*",
-      "destination": "https://vercel-koa-test.vercel.app/:match*"
+      "destination": "https://vercel-koa-mongo-db.vercel.app/:match*"
     }
   ]
 }
