--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@fingerprintjs/fingerprintjs": "^4.6.2",
 		"@micro-zoe/micro-app": "^1.0.0-rc.2",
+		"@vercel/blob": "^2.0.0",
 		"@vueuse/core": "^10.5.0",
 		"bowser": "^2.11.0",
 		"color": "^4.2.3",
