--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+      "source": "/files/:path*",
+      "destination": "https://xdfc5jonbvzcnj38.public.blob.vercel-storage.com/:path*"
+    },
+    {
       "source": "/api/:match*",
       "destination": "https://vercel-koa-mongo-db.vercel.app/:match*"
     }
