--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/files/:path*",
-      "destination": "https://glkitrrl5e5ketpc.public.blob.vercel-storage.com/:path*"
+      "destination": "https://xdfc5jonbvzcnj38.public.blob.vercel-storage.com/:path*"
     },
     {
       "source": "/api/:match*",
