--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 # 开发模式: 环境变量配置, 如需要GIT忽略本地配置操作，可在同级文件夹下创建 .evn.development.local 文件，复制此处配置，修改部分即可;
 
 # 应用信息 
-VITE_APP_NAME = vercel-test-spa
+VITE_APP_NAME = &APP_NAME&
 VITE_APP_VERSION = 1.0
 
 # 缓存配置
